# Coding-Agent

./: README.md  pyproject.toml
output/Fibonacci/: README.md  main.py  test_output.txt  tests.py
src/coding_agent/: crew.py  main.py
src/coding_agent/config/: agents.yaml  tasks.yaml
