[project]
name = "coding_agent"
version = "0.1.0"
description = "Coding-Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
coding_agent = "coding_agent.main:run"
run_crew = "coding_agent.main:run"
train = "coding_agent.main:train"
replay = "coding_agent.main:replay"
test = "coding_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
